More bug squashing, layout

--- a/advancedroulette.css
+++ b/advancedroulette.css
@@ -26,7 +26,7 @@ h1 {
     background-color: rgb(202, 29, 29);
     width: 15vw;
     height: 7.5vh;
-    font-size: 35px;
+    font-size: 33px;
     max-width: 288px;
     max-height: 71px;
     min-height: 75px;
@@ -65,6 +65,10 @@ h1 {
 }
 
 a:visited {
+    color: #f0f0f0;
+}
+
+a:active {
     color: #f0f0f0;
 }
 
@@ -107,5 +111,9 @@ a:visited {
             margin-top: auto;
             text-align: center;
             background-color: #0e0e0e;
+    }
+
+    .gameDoc img {
+        margin-left: -9px;
     }
 }
