--- a/howitworks.css
+++ b/howitworks.css
@@ -24,6 +24,10 @@ a:visited {
     color: #f0f0f0;
 }
 
+a:active {
+    color: #f0f0f0;
+}
+
 .footer {
     color: #f0f0f0;
     display: grid;
@@ -68,4 +72,8 @@ a:visited {
         text-align: center;
         background-color: #0e0e0e;
     }
+    .gameDoc img {
+        margin-left: -9px;
+    }
+
 }
