--- a/index.css
+++ b/index.css
@@ -20,6 +20,10 @@ a:visited {
     color: #f0f0f0;
 }
 
+a:active {
+    color: #f0f0f0;
+}
+
 .footer {
     color: #f0f0f0;
     display: grid;
@@ -44,7 +48,7 @@ a:visited {
     background-color: rgb(202, 29, 29);
     width: 15vw;
     height: 7.5vh;
-    font-size: 35px;
+    font-size: 33px;
     max-width: 288px;
     max-height: 71px;
     min-height: 75px;
@@ -59,7 +63,6 @@ a:visited {
 }
 .games {
     display: flex;
-    justify-content: center;
     text-align: center;
     height: auto;
     z-index: 0;
@@ -69,7 +72,6 @@ a:visited {
     margin-left: auto;
     margin-right: auto;
     font-size: 25px;
-    
 }
 
 .games img {
@@ -104,4 +106,8 @@ a:visited {
             text-align: center;
             background-color: #0e0e0e;
     }
+    .gameDoc img {
+        margin-left: -9px;
+    }
+
 }
